--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
                         <p>Punten: 8</p>
                         <p>
                             Winnaar:
-                            <span id="winnaar">Ant-Man</span>
+                            <span id="winnaar">wasp</span>
                         </p>
                     </div>
                     <div class="meta">
-                        <img id="winnaar-image" src="images/ant_man.png">
+                        <img id="winnaar-image" src="images/wasp.png">
                     </div>
                 </header>
 
@@ -234,7 +234,7 @@
                         <p>Soms is er bij een conflict geen keuze, maar moet je handmatig de wijzigingen samen voegen.</p>
                         <p>
                             Donaties:
-                            <span id="donaties">FTT 0,00</span>
+                            <span id="donaties">187 FTX FTT coins</span>
                         </p>
                     </div>
                     <div class="meta">
